# qufilab

./: .gitignore  README.md  indicators.yaml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  indicators.rst  indicators.yaml  installation.rst  intro.rst  maintainers.rst  patterns.rst
docs/source/_static/: custom.css
docs/source/_static/css/: custom.css
quant/common/: time.h
quant/indicators/: interface.py  trend.cc  trend.h
qufilab/: CMakeLists.txt  __init__.py  models.cc
qufilab/indicators/: CMakeLists.txt  _momentum.cc  _momentum.h  _stat.cc  _stat.h  _trend.cc  _volatility.cc  _volatility.h  _volume.cc  _volume.h  interface.py  momentum.cc  momentum.py  stat.cc  stat.py  trend.cc  trend.h  trend.py  util.h  volatility.cc  volatility.h  volatility.py  volume.cc  volume.py
qufilab/patterns/: CMakeLists.txt  _bullish.cc  _bullish.h  bullish.py  candlestick.cc  candlestick.h  conditions.h  data_container.h  pattern_utility.h
qufilab/sample/: DJI.csv  MSFT.csv  NFLX.csv  TSLA.csv
tests/: ind_calculations.m  indicators_compare.m  indicators_excel.xlsx  tests.py  ~$indicators_excel.xlsx
